# qa_guru_python_4_18

./: pyproject.toml  tests_api.py
schemas/: reqres.py
