[tool.poetry]
name = "qa-guru-python-4-18"
version = "0.1.0"
description = ""
authors = ["Stanislav < oz3r@mail.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_python_4_18"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
voluptuous="0.13.1"
pytest-voluptuous="1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
